--- a/src/app/sites/team/team.component.scss
+++ b/src/app/sites/team/team.component.scss
@@ -2,7 +2,7 @@
 @import '~webapps-reschke-common/scss/mixins';
 
 .team-content-container {
-    background-color: $main-background-color-dark;
+    background-color: $main-background-color;
     .team-content {
         width: 100%;
         margin-top: 50px;
