--- a/src/app/sites/current/current.component.scss
+++ b/src/app/sites/current/current.component.scss
@@ -35,7 +35,7 @@
                     font-size: 12px;
                     padding: 0 10px;
                     font-weight: 600;
-                    color: $main-background-color-dark;
+                    color: $main-background-color;
                     background-color: $main-text-color-on-dark-bg; 
                 }
                 .post-heading {
