--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,137 +1,3 @@
 @import './variables.scss';
 @import '~webapps-reschke-common/scss/mixins';
-
-/* You can add global styles to this file, and also import other style files */
-body, html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    font: 400 15px/1.8 "Raleway", sans-serif;
-    color: #777;
-    background-color: #000;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.header-image {
-    .header-image-title {
-        position: absolute;
-        top: 40%;
-        width: 100%;
-        text-align: center;
-        text-transform: uppercase;
-        color: #fff;
-        h1 {
-            display: inline-block;
-            padding: 10px 30px;
-            background-color: rgba(#000, 0.6);
-            margin: 0;            
-        }
-    }
-}
-
-.nav-spacer {
-    height: 70px;
-}
-
-app-current {
-    background-color: #c7c7c7;        
-}
-
-.main-content-container {
-    color: $main-text-color-on-dark-bg;
-}
-
-.main-content-container-padding {
-    padding-left: 20px;
-    padding-right: 20px; 
-}
-
-.main-content-navbar-spacer {
-    margin-top: 80px;
-}
-
-.main-title {
-    margin: 0;
-}
-
-.tth-button {
-    border: 1px solid $main-text-color;
-    padding: 3px 12px;
-    margin: 5px 0;
-    border-radius: 18px;
-    display: inline-block;
-    @include transition(background-color 0.3s ease);
-    .tth-button-icon {
-        margin-right: 10px;
-    }
-    &:hover {
-        cursor: pointer;
-        color: $main-background-color-dark;
-        background-color: $main-text-color;
-    }
-}
-
-/*************
-* ANIMATIONS *
-**************/
-
-@keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes slide-up {
-    from {
-        transform: translateY(15px);
-    }
-    to {
-        transform: translateY(0px);
-    }
-}
-
-@keyframes slide-down {
-    from {
-        transform: translateY(-15px);
-    }
-    to {
-        transform: translateY(0px);
-    }
-}
-
-@keyframes slow-zoom-image-out {
-    from {
-        transform: scale(1.1);
-    }
-    to {
-        transform: scale(1.0);
-    }
-}
-
-@media (min-width: $media-breakpoint-md) {
-    .main-content-container {
-        .main-content {
-            max-width: $media-breakpoint-md;
-            margin: 0 auto;
-        }
-    }
-    .main-content-container-padding {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-}
-
-@media (min-width: $media-breakpoint-lg) {
-    .main-content-container {
-        .main-content {
-            max-width: $media-breakpoint-lg;
-        }
-    }
-}
+@import '~webapps-reschke-common/scss/styles-common'
