--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
 @import '../variables';
-@import '~webapps-reschke-common/scss/mixins';
-@import '~webapps-reschke-common/scss/loading-animation';
+@import '~webapps-reschke-common/scss/mixins.scss';
+@import '~webapps-reschke-common/scss/loading-animation.scss';
 
