--- a/src/app/image-slider/image-slider.component.scss
+++ b/src/app/image-slider/image-slider.component.scss
@@ -1,5 +1,5 @@
 @import '../../variables.scss';
-@import '~webapps-reschke-common/scss/mixins';
+@import '~webapps-reschke-common/scss/mixins.scss';
 
 .image-slider-container {
     width: 100%; 
