--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -1,3 +1,3 @@
 @import '../../variables.scss';
-@import '~webapps-reschke-common/scss/mixins';
+@import '~webapps-reschke-common/scss/mixins.scss';
 @import '~webapps-reschke-common/scss/main-page.component';
