--- a/src/app/sites/locations/location/location.component.scss
+++ b/src/app/sites/locations/location/location.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../variables.scss';
-@import '~webapps-reschke-common/scss/mixins';
+@import '~webapps-reschke-common/scss/mixins.scss';
 
 .location-content-container {
     opacity: 0;
