--- a/src/app/sites/stage/performance/performance.component.scss
+++ b/src/app/sites/stage/performance/performance.component.scss
@@ -1,5 +1,5 @@
 @import '../../../../variables.scss';
-@import '~webapps-reschke-common/scss/mixins';
+@import '~webapps-reschke-common/scss/mixins.scss';
 
 .performance-component {
     animation-name: fade-in;
