--- a/src/app/sites/team/team.component.scss
+++ b/src/app/sites/team/team.component.scss
@@ -1,5 +1,5 @@
 @import '../../../variables.scss';
-@import '~webapps-reschke-common/scss/mixins';
+@import '~webapps-reschke-common/scss/mixins.scss';
 
 .team-content-container {
     background-color: $main-background-color;
