Make code more generic for better reusability

--- a/src/app/sites/locations/location/location.component.html
+++ b/src/app/sites/locations/location/location.component.html
@@ -24,7 +24,7 @@
 
 <div *ngIf="location" class="location-content-container  main-content-container main-content-container-padding">
   <div class="location-content main-content">
-    <app-schedule [locationInitials]='location.initials'></app-schedule>
+    <app-schedule [locationShortId]='location.shortId'></app-schedule>
   </div>
 </div>
 <div class="location-bottom-space"></div>
