--- a/src/app/sites/locations/locations.component.html
+++ b/src/app/sites/locations/locations.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="course-tags-container main-content-container">
     <div class="course-tags main-content">
-      <a *ngFor="let location of locations, let i = index" class="course-tag-container" (mouseenter)="mouseEnter(location)" (mouseleave)="mouseLeave(location)" [routerLink]="['/standorte', i]">
+      <a *ngFor="let location of locations, let i = index" class="course-tag-container" (mouseenter)="mouseEnter(location)" (mouseleave)="mouseLeave(location)" [routerLink]="getLocationLink(location)">
         <div class="black-bg-mask">
           <div class="home-thumb-black-bg">
 
