--- a/src/app/sites/team/team.component.html
+++ b/src/app/sites/team/team.component.html
@@ -2,7 +2,7 @@
 <div class="team-content-container main-content-container main-content-container-padding">
   <div class="team-content main-content">
     <div *ngFor="let teacher of teachers" class="team-member-container">
-      <div class="team-member-card" [routerLink]="['/lehrer', getTeacherUrlId(teacher)]">
+      <div class="team-member-card" [routerLink]="['/lehrer', teacher.shortId, getTeacherUrlId(teacher)]">
         <div class="team-member-bg-container" [ngStyle]="getBackgroundStyle(teacher.image)">
           <div class="team-member-bg-mask">
           </div>
@@ -11,8 +11,9 @@
           </div>
         </div>
         <div class="team-member-tag">
-          <div class="team-member-tag-name">{{teacher.firstName}} {{teacher.lastName}}
-
+          <div class="team-member-tag-name">
+            {{teacher.firstName}} 
+            {{teacher.lastName}}
           </div>
           <div class="team-member-tag-task" [innerHTML]="teacher.task">
 
