--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
 @import './variables.scss';
 @import '~webapps-reschke-common/scss/mixins';
-@import '~webapps-reschke-common/scss/styles-common'
+@import '~webapps-reschke-common/scss/styles-common';
+@import '~webapps-reschke-common/src/app/angular-components/scss/cookies-notification.component.scss';
+@import '~webapps-reschke-common/src/app/angular-components/scss/footer.component.scss';
