--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,10 +10,11 @@ $main-text-color-on-light-bg: #252525;
 $post-seperator-color: #8C8C8C;
 $accent-color-1: #595959;
 $main-background-color: #000000;
-$main-background-color-2: #222222;
+$main-background-color-2: #111111;
 $main-background-color-dark: #000000;
 $main-background-color-imprint: #1b1b1b;
 $main-background-color-light: #f0f0f0;
+$footer-background-color: #000000;
 $download-link-color: #dbd6d6;
 $border-color-dark-2: #2c2c2c;
 $border-color-light-2: #b4b4b4;
