Extract app component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './styles-tth.scss';
 @import '~webapps-reschke-common/scss/mixins';
 @import '~webapps-reschke-common/scss/styles-common';
 @import '~webapps-reschke-common/src/app/angular-components/scss/cookies-notification.component.scss';
