--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,5 @@
 @import '~webapps-reschke-common/scss/styles-common';
 @import '~webapps-reschke-common/src/app/angular-components/scss/cookies-notification.component.scss';
 @import '~webapps-reschke-common/src/app/angular-components/scss/footer.component.scss';
+@import '~webapps-reschke-common/src/app/angular-components/app-01/app-01.component.scss';
+@import '~webapps-reschke-common/src/app/angular-components/navigation-01/navigation-01.component.scss';
