Susanne main page header

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -7,16 +7,17 @@
       </div>
     </div>
     <div class="logo-container" [ngClass]="[pageLoaded ? 'show' : '']">
-      <div class="logo-container-inner">  
-        <div class="logo" routerLink="/"></div>
+      <div class="logo-container-inner">
+        <div class="logo font-[august] text-[30px] hidden" routerLink="/">SB</div>
       </div>
     </div>
     <!-- <div class="logo-container" *ngIf="!pageIsHome">
         <div class="logo" routerLink="/"></div>
     </div> -->
-    <div class="title-container" *ngIf="pageIsHome" [ngClass]="[pageLoaded && pageInitiallyLoaded && isBrowser ? '' : '']">
-      <div class="title" routerLink="/">Tanztheater<br/>Anita Hanke</div>
-    </div> 
+    <div class="title-container" *ngIf="pageIsHome"
+      [ngClass]="[pageLoaded && pageInitiallyLoaded && isBrowser ? '' : '']">
+      <div class="title" routerLink="/">Tanztheater<br />Anita Hanke</div>
+    </div>
   </div>
   <div class="main-content-container main-content-container-padding">
     <div class="navbar main-content" [ngClass]="isMobileNavOpen === true ? 'mobile-nav-open': ''">
@@ -49,7 +50,8 @@
           </a>
           <div class="dropdown-content">
             <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="closeMobileNav()">Kurse</a>
-            <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="closeMobileNav()">Preise &amp; Stundenpläne</a>
+            <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen"
+              (click)="closeMobileNav()">Preise &amp; Stundenpläne</a>
           </div>
         </div>
         <a class="navbar-navigation-link" routerLink="/blog" (click)="closeMobileNav()">
