--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,7 +13,7 @@ $main-background-color-dark: #000000;
 $main-background-color-imprint: #1b1b1b;
 $main-background-color-light: #f0f0f0;
 $download-link-color: #dbd6d6;
-$background-color-dark-2: #222222;
+$background-color-dark-2: #ff827c;
 $background-color-dark-3: #0f0f0f;
 $border-color-dark-2: #2c2c2c;
 $border-color-light-2: #b4b4b4;
