--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -11,17 +11,10 @@
     <div class="video-overlay" [ngClass]="videoLoaded === true  ? 'hide' : ''"></div>
 </div>-->
 <app-sb-main-page-header></app-sb-main-page-header>
-<div class="w-full text-center pt-[150px] pb-[200px] bg-[#ffebcc] text-[#f24139]">
-    <span class="font-[august] text-[100px]  ">Rücken-Fit</span>
-    <p></p>
-</div>
-<div class="main-page-section-container">
-    <app-main-page-section *ngIf="philosophySection" [sectiondata]='philosophySection' isFirstSection='true'>
+<div class="main-page-section-container bg-[#ffebcc] text-[#f24139]">
+    <app-main-page-section *ngIf="rueckenFitSection" [sectiondata]='rueckenFitSection' isFirstSection='true'>
     </app-main-page-section>
-    <app-main-page-section *ngIf="blogSection" [sectiondata]='blogSection'></app-main-page-section>
-    <app-main-page-section *ngIf="coursesSection" [sectiondata]='coursesSection'></app-main-page-section>
-    <app-main-page-section *ngIf="performancesSection" [sectiondata]='performancesSection'></app-main-page-section>
-    <app-main-page-section *ngIf="performancesSection" [sectiondata]='teamSection'></app-main-page-section>
-    <app-main-page-section *ngIf="locationsSection" [sectiondata]='locationsSection'></app-main-page-section>
-    <app-main-page-section *ngIf="contactSection" [sectiondata]='contactSection'></app-main-page-section>
+    <app-main-page-section *ngIf="nordicWalkingSection" [sectiondata]='nordicWalkingSection'></app-main-page-section>
+    <app-main-page-section *ngIf="ernaehrungsberatungSection" [sectiondata]='ernaehrungsberatungSection'></app-main-page-section>
+
 </div>
