--- a/src/app/components/sb-main-page-header/sb-main-page-header.component.html
+++ b/src/app/components/sb-main-page-header/sb-main-page-header.component.html
@@ -1,17 +1,18 @@
-<div class="text-center h-full w-full flex flex-col bg-[#ffebcc]">
+<div class="text-center h-full w-full flex flex-col main-content-container main-content-container-padding">
     <div class="bg"></div>
     <div class="h-full w-full max-w-[1200px] ml-[auto] mr-[auto]">
         <div class="h-[35%] relative">
             <div class="outer">
                 <div class="middle">
                     <div class="inner">
-                        <span class="text-[250px] leading-[250px] font-[august] text-[#f24139] flex-1">Susanne
+                        <span
+                            class="text-[150px] md:text-[250px] leading-[250px] font-[august] text-[#f24139] flex-1">Susanne
                             Brenner</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="flex h-[65%] pb-[20px]">
+        <div class="image-container flex h-[65%] pb-[20px]">
             <div class="img-tile">
                 <div class="img-container">
                     <div class="img-background img1"></div>
