--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -1,245 +1,242 @@
-@import '../../../variables.scss';
-@import '../../../mixins.scss';
+@import "../../../variables.scss";
+@import "../../../mixins.scss";
 
 @keyframes rotate90deg {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(90deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(90deg);
+  }
 }
 
 .schedule-component {
-    margin-bottom: 20px;
-    .schedule-header {
-        .schedule-title {
-            margin-top: 0;
-            line-height: 1.5em;
-            &:hover {
-                cursor: pointer;
-            }
-            .navigation-icon {
-                font-size: 0.7em;
-                margin-left: 20px;
-                &.schedule-open {
-                    animation-name: rotate90deg;
-                    animation-duration: 0.3s;
-                    animation-timing-function: ease;
-                    animation-fill-mode: forwards;  
-                }
-            }
-        }
-        .schedule-navigation-container {
-            margin-bottom: 20px;
-            &.schedule-open {
-                height: auto;
-                animation-name: fade-in;
-                animation-duration: 1s;
-                animation-timing-function: ease;
-                animation-fill-mode: forwards;
-            }
-            &.schedule-closed {
-                opacity: 0;
-                height: 0;
-                overflow: hidden;
-                margin: 0;
-            }
-            &.schedule-navigation-hide-filters {
-                .schedule-navigation-filter-segments {
-                    display: none;
-                }
-            }
-            .schedule-navigation-filter-segments {
-                .schedule-navigation-segment {
-                    display: inline-block;
-                    &.schedule-navigation-age-groups {
-                        margin-right: 20px;
-                    }
-                    select {
-                        color: $main-text-color;
-                        background-color: $main-background-color-dark;
-                        height: 30px;
-                        margin-bottom: 10px;
-                    }
-                    .schedule-navigation-element {
-                        display: inline-block;
-                        margin-right: 15px;
-                        &:hover {
-                            cursor: pointer;
-                        }
-                        &.active {
-                            .schedule-navigation-text {
-                                border-bottom: 1px solid $main-text-color;
-                            }
-                        }
-                        &:not(.active) {
-                            .schedule-info-icon {
-                                color: #414141 !important;
-                                border-color: #414141 !important;
-                            }
-                        }
-                        .schedule-navigation-text {
-                            margin-left: 10px;
-                            display: inline-block;
-                        }
-                    }
-                }
-            }
-            .schedule-navigation-style-selector {
-                display: none;
-            }
-        }
-    }
-    .schedule-container {
-        overflow: hidden;
-        &.schedule-closed {
-            height: 0;
-            opacity: 0;
-        }
+  margin-bottom: 20px;
+  .schedule-header {
+    .schedule-title {
+      margin-top: 0;
+      &:hover {
+        cursor: pointer;
+      }
+      .navigation-icon {
+        font-size: 0.7em;
+        margin-left: 20px;
         &.schedule-open {
-            height: auto;
-            animation-name: fade-in;
-            animation-duration: 1s;
-            animation-timing-function: ease;
-            animation-fill-mode: forwards; 
-            margin-bottom: 50px;
+          animation-name: rotate90deg;
+          animation-duration: 0.3s;
+          animation-timing-function: ease;
+          animation-fill-mode: forwards;
         }
-        .day-container {
-            .day-title {
-                border-bottom: 1px solid $main-text-color;
-                margin-bottom: 10px;
-            }
-            .appointment-container {
-                font-size: 13px;
-                margin-bottom: 10px;
-                @include transition(color 0.3s ease);
-                &:focus {
-                    outline: none;
-                }
-                &.has-course-link:hover {
-                    cursor: pointer;
-                }
-                .appointment-time {
-                    color: #fff;
-                    font-size: 11px;
-                }
-                .appointment-info-icons-container {
-                    .schedule-info-icon {
-                        display: inline-block;
-                        margin-right: 10px;
-                    }
-                }
-            }
-        }
+      }
     }
+    .schedule-navigation-container {
+      margin-bottom: 20px;
+      &.schedule-open {
+        height: auto;
+        animation-name: fade-in;
+        animation-duration: 1s;
+        animation-timing-function: ease;
+        animation-fill-mode: forwards;
+      }
+      &.schedule-closed {
+        opacity: 0;
+        height: 0;
+        overflow: hidden;
+        margin: 0;
+      }
+      &.schedule-navigation-hide-filters {
+        .schedule-navigation-filter-segments {
+          display: none;
+        }
+      }
+      .schedule-navigation-filter-segments {
+        .schedule-navigation-segment {
+          display: inline-block;
+          &.schedule-navigation-age-groups {
+            margin-right: 20px;
+          }
+          select {
+            color: $main-text-color;
+            background-color: $main-background-color-dark;
+            height: 30px;
+            margin-bottom: 10px;
+          }
+          .schedule-navigation-element {
+            display: inline-block;
+            margin-right: 15px;
+            &:hover {
+              cursor: pointer;
+            }
+            &.active {
+              .schedule-navigation-text {
+                border-bottom: 1px solid $secondary-text-color;
+              }
+            }
+            &:not(.active) {
+              .schedule-info-icon {
+                color: #414141 !important;
+                border-color: #414141 !important;
+              }
+            }
+            .schedule-navigation-text {
+              margin-left: 10px;
+              display: inline-block;
+            }
+          }
+        }
+      }
+      .schedule-navigation-style-selector {
+        display: none;
+      }
+    }
+  }
+  .schedule-container {
+    overflow: hidden;
+    &.schedule-closed {
+      height: 0;
+      opacity: 0;
+    }
+    &.schedule-open {
+      height: auto;
+      animation-name: fade-in;
+      animation-duration: 1s;
+      animation-timing-function: ease;
+      animation-fill-mode: forwards;
+      margin-bottom: 50px;
+    }
+    .day-container {
+      .day-title {
+        border-bottom: 1px solid $secondary-text-color;
+        margin-bottom: 10px;
+      }
+      .appointment-container {
+        font-size: 16px;
+        margin-bottom: 10px;
+        @include transition(color 0.3s ease);
+        &:focus {
+          outline: none;
+        }
+        &.has-course-link:hover {
+          cursor: pointer;
+        }
+        .appointment-time {
+          font-size: 14px;
+          font-weight: 900;
+        }
+        .appointment-info-icons-container {
+          .schedule-info-icon {
+            display: inline-block;
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: $media-breakpoint-md - 1) {
-    .schedule-component {
-        .schedule-container {
-            .day-container {
-                width: 100% !important;
-                &.day-container-empty {
-                    display: none;
-                }
-                .day-title {
-                    font-size: 1.5em;
-                }
-                .appointment-container {
-                    .appointment-title {
-                        font-size: 1.5em;
-                    }
-                    .appointment-time {
-                        font-size: 1.2em;
-                    }
-                    .schedule-no-colors-label { 
-                        display: inline-block;
-                    }
-                    .appointment-info-icons-container {
-                        font-size: 1.2em;
-                        .schedule-info-icon {
-                            color: $main-text-color !important;
-                            margin-left: 7px;
-                        }
-                    }
-                }
-            }
+  .schedule-component {
+    .schedule-container {
+      .day-container {
+        width: 100% !important;
+        &.day-container-empty {
+          display: none;
         }
+        .day-title {
+        }
+        .appointment-container {
+          .appointment-title {
+            font-size: 1.5rem;
+          }
+          .appointment-time {
+            font-size: 1.2rem;
+          }
+          .schedule-no-colors-label {
+            display: inline-block;
+          }
+          .appointment-info-icons-container {
+            font-size: 1.2em;
+            .schedule-info-icon {
+              color: $main-text-color !important;
+              margin-left: 7px;
+            }
+          }
+        }
+      }
     }
+  }
 }
 
-
 @media (min-width: $media-breakpoint-md) {
-    .schedule-component {
-        .schedule-header {
-            display: flex;
-            flex-direction: row;
-            .schedule-title {
-                flex: 1;
-            }
-            .schedule-navigation-container {
-                margin-top: 8px;
-                .schedule-navigation-style-selector {
-                    display: block;
-                    font-size: 12px;
-                    float: right;
-                    &:hover {
-                        cursor: pointer;
-                    }
-                    .schedule-navigation-style-selector-icon {
-                        margin-right: 3px;
-                    }
-                }
-            }
+  .schedule-component {
+    .schedule-header {
+      display: flex;
+      flex-direction: row;
+      .schedule-title {
+        flex: 1;
+      }
+      .schedule-navigation-container {
+        margin-top: 8px;
+        .schedule-navigation-style-selector {
+          display: block;
+          font-size: 12px;
+          float: right;
+          &:hover {
+            cursor: pointer;
+          }
+          .schedule-navigation-style-selector-icon {
+            margin-right: 3px;
+          }
         }
-        .schedule-container {
-            display: flex;
-            flex-direction: row;
-            .day-container {
-                .appointment-container {
-                    padding: 5px 10px;
-                    margin-right: 15px;
-                    display: flex;
-                    flex-direction: column;
-                    // border: 1px solid $border-color-dark-2;
-                    background-color: $background-color-dark-2;
-                    border-radius: 3px;
-                    color: #fff;
-                    &.has-course-link:hover {
-                        background-color: #222222;
-                    }
-                    &:not(.display-colors) {
-                        .appointment-info-icons-container {
-                            font-size: 11px;
-                            .schedule-info-icon {
-                                color: $main-text-color !important;
-                            }
-                        }
-                    }
-                    &.display-colors {
-                        .appointment-info-icons-container {
-                            display: inline-block;
-                            .schedule-no-colors-label {
-                                display: none;
-                            }
-                            .appointment-age-groups, .appointment-levels {
-                                display: inline-block;
-                            }
-                            .schedule-info-icon {
-                                min-width: 20px;
-                                height: 20px;
-                                text-align: center;
-                                font-size: 12px;
-                                border-radius: 10px;
-                                padding: 0 7px;
-                                border: 1px solid;
-                                margin-bottom: 5px;
-                            }
-                        }
-                    }
-                }
-            }
-        }
+      }
     }
+    .schedule-container {
+      display: flex;
+      flex-direction: row;
+      .day-container {
+        .appointment-container {
+          padding: 5px 10px;
+          margin-right: 15px;
+          display: flex;
+          flex-direction: column;
+          // border: 1px solid $border-color-dark-2;
+          background-color: $secondary-background-color;
+          border-radius: 3px;
+          &.has-course-link:hover {
+            background-color: #222222;
+          }
+          &:not(.display-colors) {
+            .appointment-info-icons-container {
+              font-size: 11px;
+              .schedule-info-icon {
+                color: $main-text-color !important;
+              }
+            }
+          }
+          &.display-colors {
+            .appointment-info-icons-container {
+              display: inline-block;
+              .schedule-no-colors-label {
+                display: none;
+              }
+              .appointment-age-groups,
+              .appointment-levels {
+                display: inline-block;
+              }
+              .schedule-info-icon {
+                min-width: 20px;
+                height: 20px;
+                text-align: center;
+                font-size: 12px;
+                border-radius: 10px;
+                padding: 0 7px;
+                border: 1px solid;
+                margin-bottom: 5px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
