--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,87 +1,135 @@
-@import './variables.scss';
-@import './mixins';
+@import "./variables.scss";
+@import "./mixins";
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
 /* You can add global styles to this file, and also import other style files */
-body, html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    font: 400 15px/1.8 "Raleway", sans-serif;
-    color: #000;
-    background-color: #fff;
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  font: 400 15px/1.8 "Raleway", sans-serif;
+  color: #000;
+  background-color: $main-background-color;
 }
 
 @font-face {
-    font-family: august;
-    src: url('assets/font/August-Bold.woff') format('woff'), /* Modern Browsers */
-       url('assets/font/August-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-  }
+  font-family: august;
+  src: url("assets/font/August-Bold.woff") format("woff"),
+    /* Modern Browsers */ url("assets/font/August-Bold.ttf") format("truetype"); /* Safari, Android, iOS */
+}
+
+.font-august {
+  font-family: august;
+}
+
+.text-default {
+  font-size: 1.2rem;
+}
+
+.text-heading-1 {
+  font-size: 5rem;
+  line-height: 6rem;
+}
+
+.text-heading-2 {
+  font-size: 3rem;
+  line-height: 4rem;
+  margin: 20px 0;
+}
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+}
+
+.speech-bubble {
+  font-size: 2.5rem;
+  line-height: 3.5rem;
+  text-transform: uppercase;
+  text-align: center;
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: $secondary-text-color;
+  border-radius: 50px;
+  color: white;
+  font-family: august;
+  padding: 30px;
+  position: relative;
+
+  &:after {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0;
+    z-index: 1;
+    border-style: solid;
+    border-color: $secondary-text-color transparent;
+    border-width: 20px 20px 0;
+    bottom: -20px;
+    left: 50%;
+    margin-left: -20px;
+  }
 }
 
 .header-image {
-    .header-image-title {
-        position: absolute;
-        top: 40%;
-        width: 100%;
-        text-align: center;
-        text-transform: uppercase;
-        color: #fff;
-        h1 {
-            display: inline-block;
-            padding: 10px 30px;
-            background-color: rgba(#000, 0.6);
-            margin: 0;            
-        }
+  .header-image-title {
+    position: absolute;
+    top: 40%;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    color: #fff;
+    h1 {
+      display: inline-block;
+      padding: 10px 30px;
+      background-color: rgba(#000, 0.6);
+      margin: 0;
     }
+  }
 }
 
 .nav-spacer {
-    height: 70px;
+  height: 70px;
 }
 
 app-current {
-    background-color: #c7c7c7;        
+  background-color: #c7c7c7;
 }
 
 .main-content-container {
-    color: $main-text-color-on-dark-bg;
 }
 
 .main-content-container-padding {
-    padding-left: 20px;
-    padding-right: 20px; 
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .main-content-navbar-spacer {
-    margin-top: 80px;
+  margin-top: 80px;
 }
 
 .main-title {
-    margin: 0;
+  margin: 0;
 }
 
 .tth-button {
-    border: 1px solid $main-text-color;
-    padding: 3px 12px;
-    margin: 5px 0;
-    border-radius: 18px;
-    display: inline-block;
-    @include transition(background-color 0.3s ease);
-    .tth-button-icon {
-        margin-right: 10px;
-    }
-    &:hover {
-        cursor: pointer;
-        color: $main-background-color-dark;
-        background-color: $main-text-color;
-    }
+  border: 1px solid $main-text-color;
+  padding: 3px 12px;
+  margin: 5px 0;
+  border-radius: 18px;
+  display: inline-block;
+  @include transition(background-color 0.3s ease);
+  .tth-button-icon {
+    margin-right: 10px;
+  }
+  &:hover {
+    cursor: pointer;
+    color: $main-background-color-dark;
+    background-color: $main-text-color;
+  }
 }
 
 /*************
@@ -89,58 +137,58 @@ app-current {
 **************/
 
 @keyframes fade-in {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes slide-up {
-    from {
-        transform: translateY(15px);
-    }
-    to {
-        transform: translateY(0px);
-    }
+  from {
+    transform: translateY(15px);
+  }
+  to {
+    transform: translateY(0px);
+  }
 }
 
 @keyframes slide-down {
-    from {
-        transform: translateY(-15px);
-    }
-    to {
-        transform: translateY(0px);
-    }
+  from {
+    transform: translateY(-15px);
+  }
+  to {
+    transform: translateY(0px);
+  }
 }
 
 @keyframes slow-zoom-image-out {
-    from {
-        transform: scale(1.1);
-    }
-    to {
-        transform: scale(1.0);
-    }
+  from {
+    transform: scale(1.1);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 @media (min-width: $media-breakpoint-md) {
-    .main-content-container {
-        .main-content {
-            max-width: $media-breakpoint-md;
-            margin: 0 auto;
-        }
+  .main-content-container {
+    .main-content {
+      max-width: $media-breakpoint-md;
+      margin: 0 auto;
     }
-    .main-content-container-padding {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
+  }
+  .main-content-container-padding {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
 }
 
 @media (min-width: $media-breakpoint-lg) {
-    .main-content-container {
-        .main-content {
-            max-width: $media-breakpoint-lg;
-        }
+  .main-content-container {
+    .main-content {
+      max-width: $media-breakpoint-lg;
     }
+  }
 }
